--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.1'
 services:
-  mba:
+  mba2:
     build: .
     restart: always
     volumes:
       - .:/app:ro
     ports:
-      - "8080:8080"
+      - "8083:8080"
